style: 移除 getBroswerBar/lock 的废弃装箱构造（强转/valueOf）